Fixed all deprecation warnings produced when compiling with Java 9. Note there are still two deprecated items that are suppressed for Java 8 with comments on how to adjust when jEdit requires Java 9.
git-svn-id: svn+ssh://svn.code.sf.net/p/jedit/svn/jEdit/trunk@24859 6b1eeb88-9816-0410-afa2-b43733a0f04e